# ClientServer

./: CMakeLists.txt  LICENSE
include/tools/: CommandLineParser.h  ISubExecutable.h  ModuleCommandLineParser.h  SubExecutableRegister.h
src/server/: main.cpp
src/server/commands/: listen.cpp
src/tools/: CommandLineParser.cpp  ModuleCommandLineParser.cpp  SubExecutableRegister.cpp
test/tools/: testCommandLineParser.cpp  testModuleCommandLineParser.cpp  testSubExecutableRegister.cpp
